welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:3: error: value %= is not a member of Int
	if (a%=b%)
             ^lastDigit:4: error: type mismatch;
 found   : Unit
 required: Boolean
	{
        ^lastDigit:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (a%=b%)
        ^